--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <title>Bedu Travels</title>
 </head>
@@ -13,8 +14,8 @@
     <img src="assets/logo.png" alt="Logo Bedu">Menu
     <nav>
         <ul>
-            <li>Sign In</li>
-            <li>Sign up</li>
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Sign up</a></li>
         </ul>
     </nav>
     </header>
